--- a/debian/rules
+++ b/debian/rules
@@ -15,6 +15,7 @@ XORG_ABI_LIST		?=
 XORG_BOUND		?=
 MULTIARCH		?=
 BACKPORT		?=
+NVIDIA_LEGACY_CHECK	?=
 NVIDIA_SETTINGS		?= nvidia-settings
 NVIDIA_ALTERNATIVE	?= nvidia$(legacy)-alternative
 ARCH_LIST		?= i386 amd64
@@ -236,6 +237,7 @@ override_dh_gencontrol:
 		-V'nvidia:xorgProvides=$(xorg_provides)' \
 		-V'nvidia:Legacy=$(legacy)' \
 		-V'nvidia:LegacyDesc=$(legacy_description)' \
+		-V'nvidia:legacy-check=$(NVIDIA_LEGACY_CHECK)' \
 		-V'nvidia-alternative=$(NVIDIA_ALTERNATIVE)' \
 		-V'nvidia-settings=$(NVIDIA_SETTINGS)' \
 		-Vnvidia:Models="`cat debian/control.models`"
@@ -388,5 +390,5 @@ get-orig-source-pack/%: get-orig-source-files/%
 	mv get-orig-source/$(call get_tarball,$*) .
 
 .PHONY: get-orig-source
-get-orig-source: get-orig-source-pack/main
+get-orig-source: get-orig-source-pack/main $(foreach a,$(filter-out $(ARCH_LIST.main),$(ARCH_LIST)),get-orig-source-pack/$a)
 	rm -rf get-orig-source
