we can now use NVIDIA's conftest.sh
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/304@6334 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -62,7 +62,10 @@ build-indep:
 build-stamp: configure-stamp
 	dh_prep
 	dh_quilt_patch
-	$(MAKE) LINUXDIR=$(KSRC)
+	unset ARCH; $(MAKE) modules KERNEL_UNAME=$(KVERS)
+#HAS_UVM#	unset ARCH; $(MAKE) -C uvm modules KERNEL_UNAME=$(KVERS) KBUILD_EXTMOD=$(CURDIR)/uvm
+#	test "#MODULE#" = "nvidia" || mv nvidia.ko #MODULE#.ko
+#HAS_UVM#	test "#MODULE#" = "nvidia" || mv uvm/nvidia-uvm.ko uvm/#MODULE#-uvm.ko
 	touch $@
 
 get_built_using	?= $(filter-out (=),$(shell dpkg-query -f='$${source:Package} (=$${source:Version})' -W $1))
@@ -93,7 +96,8 @@ clean:
 	test -f debian/control || cp debian/control.template debian/control
 	dh_testdir
 	dh_testroot
-	$(MAKE) LINUXDIR=$(KSRC) $(KPKG_EXTRAV_ARG) clean
+	$(MAKE) clean KERNEL_UNAME=$(KVERS) $(KPKG_EXTRAV_ARG)
+#HAS_UVM#	$(MAKE) -C uvm clean KERNEL_UNAME=$(KVERS) $(KPKG_EXTRAV_ARG)
 	dh_quilt_unpatch || quilt --quiltrc /dev/null pop -af
 	dh_clean debian/control debian/install
 
