--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -1,5 +1,9 @@
-use-nv-kernel.o.ARCH.patch
-conditionally-include-linux_version.h.patch
+KERNEL_UNAME.patch
+modernize-conftest.patch
+use-kbuild-compiler.patch
+use-kbuild-flags.patch
+conftest-verbose.patch
+not-silent.patch
+use-nv-kernel-ARCH.o_shipped.patch
 avoid-ld.gold.patch
 fix-typos.patch
-linux3.patch
