--- a/debian/rules
+++ b/debian/rules
@@ -151,22 +151,19 @@ build-kernel-source-tree: install-into-tmp
 	# binary packages.
 	cp -a debian/tmp/NVIDIA_Changelog $(module_source)/
 
-	# We don't want these makefiles that don't work with kbuild.
-	rm $(module_source)/makefile
-	rm $(module_source)/Makefile.nvidia
+	# We only want Kbuild.
+	rm -f $(module_source)/makefile
+	rm -f $(module_source)/Makefile.nvidia
+	mv $(module_source)/Makefile.kbuild $(module_source)/Kbuild
 
-	# We want both 32 and 64 bit versions of nv-kernel.o.  Do not use a
-	# name matching *.o to prevent accidental deletion by some clean
-	# target.
-	cp -a NVIDIA-Linux-i386/kernel/nv-kernel.o \
-	    $(module_source)/nv-kernel.o.i386
-	cp -a NVIDIA-Linux-amd64/kernel/nv-kernel.o \
-	    $(module_source)/nv-kernel.o.x86_64
+	# We may need nv-kernel.o for several architectures to accomodate
+	# all kernel flavors. Use Kbuild-compatible names.
 	rm -f $(module_source)/nv-kernel.o
+	$(foreach a,$(DEB_HOST_ARCH) $(ARCH_DEPS_$(DEB_HOST_ARCH)),cp -a NVIDIA-Linux-$a/kernel/nv-kernel.o $(module_source)/nv-kernel-$a.o_shipped ;)
 
-	# Install a debian/ tree and new conftest files that work purely
-	# with kbuild and don't require root into the module package.
-	cp -a debian/module/* $(module_source)/
+	# Install a debian/ tree.
+	cp -a debian/module/debian $(module_source)/
+	cp -a debian/module/Makefile $(module_source)/
 	cp -a debian/copyright $(module_source)/debian/
 	cp -a debian/bug-script $(module_source)/debian/
 	cp -a debian/bug-control $(module_source)/debian/
@@ -175,7 +172,6 @@ build-kernel-source-tree: install-into-tmp
 	# Fix permissions.
 	chmod -R a-sx,u=rwX,go=rX $(module_source)/../..
 	chmod a+x $(module_source)/debian/rules
-	chmod a+x $(module_source)/conftest.sh
 
 	# Build the tarball.
 	tar cfj $(module_tbz) \
