--- a/debian/module/debian/patches/series.in
+++ b/debian/module/debian/patches/series.in
@@ -3,7 +3,11 @@ KERNEL_UNAME.patch
 modernize-conftest.patch
 use-kbuild-compiler.patch
 use-kbuild-flags.patch
+build-sanity-checks.patch
 conftest-verbose.patch
+conftest-via-kbuild.patch
+disable-cc_version_check.patch
+disable-xen_sanity_check.patch
 not-silent.patch
 use-nv-kernel-ARCH.o_shipped.patch
 avoid-ld.gold.patch
