Add infra for new nvidia-drm kernel module
git-svn-id: svn://svn.debian.org/svn/pkg-nvidia/packages/nvidia-graphics-drivers/branches/364@6351 b6a4b1ba-b714-0410-8a2d-fc0b36c6496e

--- a/debian/module/debian/rules.in
+++ b/debian/module/debian/rules.in
@@ -47,6 +47,7 @@ build-stamp: configure-stamp
 	$(MAKE) KERNEL_UNAME=$(KVERS) modules
 	test "#MODULE#" = "nvidia" || mv nvidia.ko #MODULE#.ko
 	test "#MODULE#" = "nvidia" || mv nvidia-modeset.ko #MODULE#-modeset.ko
+	test "#MODULE#" = "nvidia" || mv nvidia-drm.ko #MODULE#-drm.ko
 #HAS_UVM#	test "#MODULE#" = "nvidia" || mv nvidia-uvm.ko #MODULE#-uvm.ko
 	touch $@
 
