--- a/debian/nvidia-kernel-dkms.dkms.in
+++ b/debian/nvidia-kernel-dkms.dkms.in
@@ -17,6 +17,10 @@ BUILT_MODULE_NAME[1]="nvidia-modeset"
 DEST_MODULE_NAME[1]="$PACKAGE_NAME-modeset"
 DEST_MODULE_LOCATION[1]="/updates/dkms"
 
-#HAS_UVM#BUILT_MODULE_NAME[2]="nvidia-uvm"
-#HAS_UVM#DEST_MODULE_NAME[2]="$PACKAGE_NAME-uvm"
-#HAS_UVM#DEST_MODULE_LOCATION[2]="/updates/dkms"
+BUILT_MODULE_NAME[2]="nvidia-drm"
+DEST_MODULE_NAME[2]="$PACKAGE_NAME-drm"
+DEST_MODULE_LOCATION[2]="/updates/dkms"
+
+#HAS_UVM#BUILT_MODULE_NAME[3]="nvidia-uvm"
+#HAS_UVM#DEST_MODULE_NAME[3]="$PACKAGE_NAME-uvm"
+#HAS_UVM#DEST_MODULE_LOCATION[3]="/updates/dkms"
