--- a/debian/nvidia-modprobe.conf.in
+++ b/debian/nvidia-modprobe.conf.in
@@ -2,6 +2,8 @@ install nvidia modprobe -i #MODULE# $CMDLINE_OPTS
 
 install nvidia-modeset modprobe nvidia ; modprobe -i #MODULE#-modeset $CMDLINE_OPTS
 
+install nvidia-drm modprobe #MODULE#-modeset ; modprobe -i #MODULE#-drm $CMDLINE_OPTS
+
 #HAS_UVM#install nvidia-uvm modprobe nvidia ; modprobe -i #MODULE#-uvm $CMDLINE_OPTS
 
 remove nvidia modprobe -r -i #UNLOAD_MODULES#
