--- a/debian/control
+++ b/debian/control
@@ -1,3 +1,4 @@
+#Source: nvidia-graphics-drivers${nvidia:Legacy}
 Source: nvidia-graphics-drivers
 Section: non-free/libs
 Priority: optional
@@ -18,6 +19,7 @@ Standards-Version: 3.9.3
 Homepage: http://www.nvidia.com
 XS-Autobuild: yes
 
+#Package: nvidia-glx${nvidia:Legacy}
 Package: nvidia-glx
 Section: non-free/x11
 Architecture: i386 amd64
@@ -26,17 +28,17 @@ Pre-Depends:
  nvidia-installer-cleanup,
  ${nvidia:legacy-check},
 Depends:
- libgl1-nvidia${nvidia:Legacy}-glx (= ${binary:Version}),
+ libgl1-${nvidia}-glx (= ${binary:Version}),
  libxvmcnvidia1 (= ${binary:Version}),
- xserver-xorg-video-nvidia${nvidia:Legacy} (= ${binary:Version}),
- nvidia-vdpau-driver (= ${binary:Version}),
+ xserver-xorg-video-${nvidia} (= ${binary:Version}),
+ ${nvidia}-vdpau-driver (= ${binary:Version}),
  ${nvidia-alternative} (= ${binary:Version}),
  ${nvidia:kmod:binary},
  nvidia-support,
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
  ${nvidia-settings},
- libgl1-nvidia${nvidia:Legacy}-glx-i386 [amd64],
+ libgl1-${nvidia}-glx-i386 [amd64],
 Suggests:
  ${nvidia:kmod:source},
 Provides:
@@ -57,6 +59,7 @@ Description: NVIDIA metapackage${nvidia:LegacyDesc}
  .
  Building the kernel module has been tested up to Linux ${nvidia:kmod:tested:Linux}.
 
+#Package: xserver-xorg-video-${nvidia}
 Package: xserver-xorg-video-nvidia
 Section: non-free/x11
 Architecture: i386 amd64
@@ -64,13 +67,13 @@ Pre-Depends:
  nvidia-installer-cleanup,
  ${nvidia:legacy-check},
 Depends:
- libgl1-nvidia${nvidia:Legacy}-glx (= ${binary:Version}),
+ libgl1-${nvidia}-glx (= ${binary:Version}),
  ${nvidia-alternative} (= ${binary:Version}),
  nvidia-support (>= 20120630),
  ${nvidia:xorgDepends},
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
- nvidia-vdpau-driver (>= ${nvidia:Version}),
+ ${nvidia}-vdpau-driver (>= ${nvidia:Version}),
  ${nvidia:kmod:binary},
  ${nvidia-settings},
 Suggests:
@@ -111,6 +114,7 @@ Description: NVIDIA 32-bit libraries${nvidia:LegacyDesc} (transitional package)
  This is a dummy package to aid switching to
  libgl1-nvidia${nvidia:Legacy}-glx-ia32.
 
+#Package: libgl1-${nvidia}-glx
 Package: libgl1-nvidia-glx
 Architecture: i386 amd64
 Multi-Arch: same
@@ -128,7 +132,7 @@ Recommends:
 Suggests:
  ${nvidia:kmod:source},
 Provides:
- libgl1-nvidia${nvidia:Legacy}-glx-i386 [i386],
+ libgl1-${nvidia}-glx-i386 [i386],
  libgl1-nvidia-glx-any,
  libgl1-nvidia-glx-${nvidia:Version},
 Conflicts:
@@ -161,7 +165,7 @@ Description: NVIDIA binary OpenGL libraries${nvidia:LegacyDesc}
  OpenGL applications via a direct-rendering X Server.
  .
  See the description of the nvidia-glx${nvidia:Legacy} package
- or /usr/share/doc/libgl1-nvidia${nvidia:Legacy}-glx/README.txt.gz
+ or /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
 
 Package: libxvmcnvidia1
@@ -172,7 +176,7 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${nvidia-alternative},
- libgl1-nvidia${nvidia:Legacy}-glx (= ${binary:Version}),
+ libgl1-${nvidia}-glx (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Breaks:
  libgl1-nvidia-glx (<< 304.64-3),
@@ -182,7 +186,7 @@ Description: NVIDIA binary XvMC library${nvidia:LegacyDesc}
  These binary library provides the NVIDIA XvMC implementation which supports
  GeForce 6 series and GeForce 7 series graphics cards.
  .
- See /usr/share/doc/libgl1-nvidia${nvidia:Legacy}-glx/README.txt.gz
+ See /usr/share/doc/libgl1-${nvidia}-glx/README.txt.gz
  for instructions how to enable XvMC acceleration.
 
 Package: libgl1-nvidia-glx-ia32
@@ -245,6 +249,7 @@ Description: allows the selection of NVIDIA as GLX provider
  In order to install the NVIDIA driver and libraries, install the
  nvidia-glx${nvidia:Legacy} package instead.
 
+#Package: ${nvidia}-kernel-dkms
 Package: nvidia-kernel-dkms
 Section: non-free/kernel
 Architecture: i386 amd64
@@ -277,11 +282,12 @@ Description: NVIDIA binary kernel module DKMS source${nvidia:LegacyDesc}
  .
  ${nvidia:Models}
  .
- See /usr/share/doc/nvidia-kernel${nvidia:Legacy}-dkms/README.txt.gz
+ See /usr/share/doc/${nvidia}-kernel-dkms/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
  .
  Building the kernel module has been tested up to Linux ${nvidia:kmod:tested:Linux}.
 
+#Package: ${nvidia}-kernel-source
 Package: nvidia-kernel-source
 Section: non-free/kernel
 Architecture: i386 amd64
@@ -306,17 +312,18 @@ Description: NVIDIA binary kernel module source${nvidia:LegacyDesc}
  using NVIDIA chip sets.  AGP, PCIe, SLI, TV-out and flat panel displays
  are also supported.
  .
- PLEASE read /usr/share/doc/nvidia-kernel${nvidia:Legacy}-source/README.Debian.gz
+ PLEASE read /usr/share/doc/${nvidia}-kernel-source/README.Debian.gz
  for building information.  If you want the kernel module to be automatically
- installed via DKMS, install nvidia-kernel${nvidia:Legacy}-dkms instead.
+ installed via DKMS, install ${nvidia}-kernel-dkms instead.
  .
  ${nvidia:Models}
  .
- See /usr/share/doc/nvidia-kernel${nvidia:Legacy}-source/README.txt.gz
+ See /usr/share/doc/${nvidia}-kernel-source/README.txt.gz
  for a complete list of supported GPUs and PCI IDs.
  .
  Building the kernel module has been tested up to Linux ${nvidia:kmod:tested:Linux}.
 
+#Package: ${nvidia}-vdpau-driver
 Package: nvidia-vdpau-driver
 Section: non-free/video
 Architecture: i386 amd64
@@ -335,7 +342,7 @@ Suggests:
 Enhances:
  libvdpau1,
 Provides:
- nvidia-vdpau-driver-i386 [i386],
+ ${nvidia}-vdpau-driver-i386 [i386],
  vdpau-driver,
 Conflicts:
  nvidia-libvdpau,
@@ -360,7 +367,7 @@ Description: Video Decode and Presentation API for Unix - NVIDIA driver
  .
  This package contains the NVIDIA VDPAU driver.
  .
- See /usr/share/doc/nvidia-vdpau-driver/README.txt.gz
+ See /usr/share/doc/${nvidia}-vdpau-driver/README.txt.gz
  for more information.
  .
  ${nvidia:kmod:Description}
@@ -396,11 +403,12 @@ Description: please switch to multiarch nvidia-vdpau-driver:i386
  * dpkg --add-architecture i386 ; apt-get update
  * apt-get install nvidia-vdpau-driver:i386
 
+#Package: ${nvidia}-smi
 Package: nvidia-smi
 Section: non-free/utils
 Architecture: i386 amd64
 Depends:
- libnvidia-ml1 (= ${binary:Version}),
+ lib${nvidia}-ml1 (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Recommends:
  ${nvidia:kmod:binary},
@@ -411,6 +419,7 @@ Description: NVIDIA System Management Interface
  system state and diagnostic information for the NVIDIA Tesla Visual
  Computing Systems.
 
+#Package: ${libcuda1}
 Package: libcuda1
 Architecture: i386 amd64
 Multi-Arch: same
@@ -437,13 +446,14 @@ Replaces:
  nvidia-glx-dev (<< 185.18.14-2),
  libcuda1-dev,
 Homepage: http://www.nvidia.com/CUDA
-Description: NVIDIA CUDA runtime library
+Description: NVIDIA CUDA Driver Library
  .
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
  general purpose computation.
  .
- This package contains the driver specific runtime library.
+ This package contains the CUDA Driver API library for low-level CUDA
+ programming.
  .
  Supported NVIDIA devices include GPUs starting from GeForce 8 and Quadro FX
  series, as well as the Tesla computing processors.
@@ -470,6 +480,7 @@ Description: please switch to multiarch libcuda1:i386
  * dpkg --add-architecture i386 ; apt-get update
  * apt-get install libcuda1:i386
 
+#Package: lib${nvidia}-compiler
 Package: libnvidia-compiler
 Architecture: i386 amd64
 Multi-Arch: same
@@ -512,6 +523,7 @@ Description: please switch to multiarch libnvidia-compiler:i386
  * dpkg --add-architecture i386 ; apt-get update
  * apt-get install libnvidia-compiler:i386
 
+#Package: lib${nvidia}-nvcuvid1
 Package: libnvcuvid1
 Architecture: i386 amd64
 Multi-Arch: same
@@ -519,18 +531,17 @@ Pre-Depends:
  ${misc:Pre-Depends}
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
-Description: NVIDIA CUDA nvcuvid runtime library
+Description: NVIDIA CUDA Video Decoder runtime library
  The Compute Unified Device Architecture (CUDA) enables NVIDIA
  graphics processing units (GPUs) to be used for massively parallel
  general purpose computation.
  .
- nvcuvid provides a mechanism for decoding video and exposing the surfaces to
- CUDA, allowing applications to perform custom processing of the video.
- nvcuvid is primarily targeted at transcoding and video-processing
- applications.
+ The NVIDIA CUDA Video Decoder (NVCUVID) library provides an interface to
+ hardware video decoding capabilities on NVIDIA GPUs with CUDA.
  .
  This package contains the nvcuvid runtime library.
 
+#Package: lib${nvidia}-ml1
 Package: libnvidia-ml1
 Architecture: i386 amd64
 Multi-Arch: same
@@ -539,8 +550,9 @@ Pre-Depends:
 Depends:
  ${shlibs:Depends}, ${misc:Depends}
 Breaks:
- nvidia-smi (<< ${nvidia:Version}),
-Description: NVIDIA management library (NVML) runtime library
+ ${nvidia}-smi (<< ${nvidia:Version}),
+Homepage: http://developer.nvidia.com/nvidia-management-library-NVML
+Description: NVIDIA Management Library (NVML) runtime library
  NVML provides programmatic access to static information and monitoring
  data for NVIDIA GPUs, as well as limited management capabilities.
  It is intended for use with Tesla compute products.
@@ -564,6 +576,7 @@ Description: NVIDIA OpenCL driver
  This package provides the common files for the NVIDIA installable client
  driver (ICD) for OpenCL.
 
+#Package: ${nvidia}-opencl-icd
 Package: nvidia-opencl-icd
 Architecture: i386 amd64
 Multi-Arch: same
@@ -572,7 +585,7 @@ Pre-Depends:
 Depends:
  nvidia-opencl-common (= ${binary:Version}),
  libopencl1,
- libnvidia-compiler (= ${binary:Version}),
+ lib${nvidia}-compiler (= ${binary:Version}),
  ${shlibs:Depends}, ${misc:Depends}
 Enhances:
  libopencl1,
@@ -623,7 +636,7 @@ Conflicts:
 Replaces:
  libopencl1,
  nvidia-libopencl1-dev,
-Description: NVIDIA OpenCL library
+Description: NVIDIA OpenCL ICD Loader library
  OpenCL (Open Computing Language) is a multivendor open standard for
  general-purpose parallel programming of heterogeneous systems that include
  CPUs, GPUs and other processors.
@@ -721,7 +734,7 @@ Section: non-free/x11
 Architecture: i386 amd64
 Depends:
  pciutils,
- ${shlibs:Depends}, ${misc:Depends}
+ ${misc:Depends}
 Description: NVIDIA GPU detection utility
  The 'nvidia-detect' script in this package checks for an NVIDIA GPU in the
  system and recommends one of the non-free accelerated driver meta-packages
